# aad

./: README.md  main.py  pyproject.toml
000_setup/: README.md
001_demo-1/: README.md  api.py
demo_001/: README.md  ai.py
demo_002/: README.md  ai.py  api.py
demo_003/: README.md  main.py  pyproject.toml
demo_003/core/: api.py  repository.py  schemas.py  service.py
