[project]
name = "aad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["demo_003"]
